--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@ testpaths = tests
 
 [gh-actions]
 python =
-    "3.9": py39, mypy, lint
-    "3.10": py310, docs
+    '3.9': py39, mypy, lint
+    '3.10': py310, docs
 
 [tox]
 envlist = lint, mypy, {py39,py310}, docs, coverage-report
