--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,11 @@ testpaths = tests
 
 [gh-actions]
 python =
-    '3.9': py39, mypy, lint
+    3.9: py39, mypy, lint
     '3.10': py310, docs
 
 [tox]
-envlist = lint, mypy, {py39,py310}, docs, coverage-report
+envlist = lint, mypy, py{39,310}, docs, coverage-report
 isolated_build = true
 requires = tox-conda
 
