--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ testpaths = tests
 [gh-actions]
 python =
     3.9: py39, mypy, lint
-    '3.10': py310, docs
+    3.10: py310, docs
 
 [tox]
 envlist = lint, mypy, py{39,310}, docs, coverage-report
