Working CI, fixed linter issues

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,8 @@ description = Check types
 basepython = python3.9
 extras = tests
 deps = mypy
-commands = mypy src
+allowlist_externals = echo
+commands = echo $(mypy src)
 
 [testenv:docs]
 description = Build docs and run doctests.
