--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,11 @@ testpaths = tests
 
 [gh-actions]
 python =
-    3.9: py39, mypy, lint
-    3.10: py310, docs
+    3.10: py310, mypy, lint
+    3.11: py311, docs
 
 [tox]
-envlist = lint, mypy, py{39,310}, docs, coverage-report
+envlist = lint, mypy, py{310,311}, docs, coverage-report
 isolated_build = true
 requires = tox-conda
 
@@ -16,20 +16,23 @@ requires = tox-conda
 description = Run tests and measure coverage.
 extras = tests
 commands =
-    {py39}: coverage run -m pytest {posargs}
-    {py39,py310}: python -m pytest --continue-on-collection-errors {posargs}
+    {py310}: coverage run -m pytest {posargs}
+    {py310,py311}: python -m pytest --continue-on-collection-errors {posargs}
 parallel_show_output = True
+conda_channels =
+    default
+    conda-forge
 
 [testenv:lint]
 description = Run all pre-commit hooks.
-basepython = python3.9
+basepython = python3.10
 skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files
 
 [testenv:mypy]
 description = Check types
-basepython = python3.9
+basepython = python3.10
 extras = tests
 deps = mypy
 allowlist_externals = echo
@@ -37,7 +40,7 @@ commands = echo $(mypy src)
 
 [testenv:docs]
 description = Build docs and run doctests.
-basepython = python3.10
+basepython = python3.11
 extras = docs
 changedir = docs
 commands =
@@ -46,7 +49,7 @@ commands =
 
 [testenv:coverage-report]
 description = Report coverage over all test runs.
-basepython = python3.9
+basepython = python3.10
 deps = coverage[toml]>=5.5
 skip_install = true
 commands =
