--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,11 @@
 ---
+default_language_version:
+  language_version: python3.10
 repos:
   - repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
       - id: black
-        language_version: python3.10
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.9.2
