--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 ---
 default_language_version:
-  language_version: python3.10
+  python: python3.10
 repos:
   - repo: https://github.com/psf/black
     rev: 22.3.0
