--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,4 +29,4 @@ repos:
       - id: requirements-txt-fixer
       - id: check-ast
       - id: name-tests-test
-        exclude: ^tests/(io|share).py
+        exclude: ^tests/(io|cli_util|expected|inputs).py
