--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,6 @@
 [build-system]
-requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
-build-backend = "setuptools.build_meta"
-
-[tool.isort]
-profile = "black"
+build-backend = "pdm.backend"
+requires = ["pdm-backend"]
 
 [tool.coverage.run]
 parallel = true
@@ -17,6 +14,22 @@ source = ["src", ".tox/*/site-packages"]
 show_missing = true
 skip_covered = true
 
+[project]
+authors = [
+    {email = "louismmx@gmail.com", name = "Louis Maddox"},
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Natural Language :: English",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
 dependencies = [
   "argcomplete",
   "astor",
@@ -24,3 +37,36 @@ dependencies = [
   "defopt",
   "pyflakes",
 ]
+description = "Package providing command line tools to move/copy function/classes and their associated import statements between files."
+dynamic = ["version"]
+keywords = [
+    "ast",
+]
+license = {text = "MIT"}
+name = "mvdef"
+readme = "README.md"
+requires-python = ">=3.10,<3.12"
+
+
+[tool.pdm.dev-dependencies]
+docs = [
+    "sphinx>=4",  # required for property :attr: role
+    "sphinx_rtd_theme",
+    "sphinx-autodoc-typehints",  # don't pin to 1.11.1
+]
+tests = ["coverage[toml]>=5.5", "pytest"]
+# dev = tests + docs + pre-commit
+
+[project.scripts]
+mvdef = "mvdef.cli:cli_move"
+cpdef = "mvdef.cli:cli_copy"
+lsdef = "mvdef.cli:cli_list"
+oldmvdef = "mvdef.legacy.__main__:main"
+oldmvcls = "mvdef.legacy.__main__:mvcls"
+oldcpdef = "mvdef.legacy.__main__:cpdef"
+oldcpcls = "mvdef.legacy.__main__:cpcls"
+
+[project.urls]
+Documentation = "https://mvdef.readthedocs.io/"
+Homepage = "https://github.com/lmmx/fugit"
+Repository = "https://github.com/lmmx/fugit.git"
