chore: put isort back (not moving to ruff yet)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ parallel = true
 branch = true
 source = ["mvdef"]
 
+[tool.isort]
+profile = "black"
+
 [tool.coverage.paths]
 source = ["src", ".tox/*/site-packages"]
 
