--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -46,14 +46,14 @@ jobs:
 
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: |
-          python -m pytest --version
-          python -m tox -v -p 2 # Only use 2 CPUs so coverage-report runs after pytest
+          pdm run python -m pytest --version
+          pdm run python -m tox -v -p 2 # Only use 2 CPUs so coverage-report runs after pytest
 
       - name: "Get coverage"
         run: |
           set -xe
-          python -m coverage combine
-          python -m coverage xml
+          pdm run python -m coverage combine
+          pdm run python -m coverage xml
         if: "contains(env.USING_COVERAGE, matrix.python-version)"
       - name: Upload coverage to Codecov
         if: "contains(env.USING_COVERAGE, matrix.python-version)"
@@ -83,10 +83,10 @@ jobs:
           channels: "conda-forge,anaconda"
 
       - name: "Install build, and check-wheel-content"
-        run: "python -m pip install build check-wheel-contents"
+        run: "pdm run python -m pip install build check-wheel-contents"
 
       - name: "Build package"
-        run: "python -m build --sdist --wheel ."
+        run: "pdm run python -m build --sdist --wheel ."
 
       - name: "List result"
         run: "ls -l dist"
