--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -83,7 +83,7 @@ jobs:
           channels: "conda-forge,anaconda"
 
       - name: "Install build, and check-wheel-content"
-        run: "python -m pip install build check-wheel-contents"
+        run: "python -m pip install pdm check-wheel-contents"
 
       - name: "Build package"
         run: "pdm build"
