--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -43,7 +43,7 @@ jobs:
           python -m site
           python -m pip install --upgrade pip setuptools pdm
           python -m pip install --upgrade pytest coverage[toml] tox tox-conda tox-gh-actions
-          pdm install
+          pdm install -dG dev -dG tests
 
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: |
