fix: add CI group to deps

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -42,8 +42,7 @@ jobs:
           python -VV
           python -m site
           python -m pip install --upgrade pip setuptools pdm
-          python -m pip install --upgrade pytest coverage[toml] tox tox-conda tox-gh-actions
-          pdm install -dG dev -dG tests
+          pdm install -dG dev -dG tests -dG ci
 
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: |
