--- a/tox.ini
+++ b/tox.ini
@@ -10,14 +10,15 @@ python =
 [tox]
 envlist = lint, mypy, py{310,311}, docs, coverage-report
 isolated_build = true
-requires = tox-conda
+requires = tox-pdm
 
 [testenv]
 description = Run tests and measure coverage.
 extras = tests
+allowlist_externals = coverage
 commands =
-    {py310}: coverage run -m pytest {posargs}
-    {py310,py311}: python -m pytest --continue-on-collection-errors {posargs}
+    {py310}: coverage run -m pytest -m "not skiponci" {posargs}
+    {py310,py311}: pdm run pytest -m "not skiponci" --continue-on-collection-errors {posargs}
 parallel_show_output = True
 conda_channels =
     default
