--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,7 @@ description = Build docs and run doctests.
 basepython = python3.11
 extras = docs
 changedir = docs
+allowlist_externals = sphinx-build
 commands =
     sphinx-build -M html "." "_build" -W --keep-going
     sphinx-build -M doctest "." "_build" -W --keep-going
