--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -42,7 +42,7 @@ jobs:
           python -VV
           python -m site
           python -m pip install --upgrade pip setuptools pdm
-          pdm install -dG tests -dG ci
+          pdm install -d
 
       - name: "Run tox targets for ${{ matrix.python-version }}"
         run: |
