--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "buildCommand": "bash ./docs/vercel/build.sh",
-  "outputDirectory": "docs/_build/html",
+  "outputDirectory": "site",
   "installCommand": "bash ./docs/vercel/deploy.sh"
 }
