--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ ci = ["tox", "tox-pdm", "tox-gh-actions"]
 docs = [
     "mkdocs>=1.5.3",
     "mkdocs-material[recommended,imaging]>=9.5.2",
-    "mkdocstrings>=0.24.0",
+    "mkdocstrings[python]>=0.24.0",
 ]
 tests = ["coverage[toml]>=5.5", "pytest", "tox"]
 
