--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ site_url: https://mvdef.vercel.app
 repo_name: lmmx/mvdef
 repo_url: https://github.com/lmmx/mvdef
 strict: true
+watch: [src]
 
 extra_css:
   - stylesheets/extra.css
@@ -16,17 +17,8 @@ theme:
   name: material
   custom_dir: docs/theme
   palette:
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
-      primary: custom
-      toggle:
-        icon: material/lightbulb-outline
-        name: Switch to dark mode
-    - scheme: slate
-      primary: custom
-      toggle:
-        icon: material/lightbulb
-        name: Switch to light mode
+    - scheme: default
+      primary: white
   # logo: assets/images/logo-white.svg
   # favicon: assets/images/logo-black.svg
   icon:
@@ -38,13 +30,14 @@ theme:
     - content.code.copy
     - header.autohide
     - navigation.indexes
+    - navigation.instant
+    - navigation.instant.progress
+    - navigation.prune
     - navigation.tabs
     - navigation.tabs.sticky
+    - navigation.sections
     - search
     - search.suggest
-    - section-index
-    - toc.follow
-    - toc.integrate
   font:
     text: Inter
     code: Source Code Pro
@@ -72,21 +65,41 @@ markdown_extensions:
       line_spans: __span
       pygments_lang_class: true
       noclasses: True
-      pygments_style: nord-darker
+      pygments_style: lovelace
+  - pymdownx.snippets
   - pymdownx.superfences
-  - pymdownx.tabbed:
-      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - toc:
+      permalink: true
 
 plugins:
+  - autorefs
   - mkdocstrings:
       default_handler: python
       handlers:
         python:
+          paths: [src/*/]
           options:
+            members_order: source
+            separate_signature: true
+            filters: ["!^_"]
+            docstring_options:
+              ignore_init_summary: true
+            merge_init_into_class: true
+            line_length: 88 # default: 60
+            # show_if_no_docstring: true
+            show_root_full_path: false
+            show_root_toc_entry: false
+            show_source: true
             show_submodules: true
+            show_signature_annotations: true
+  - search
+  - section-index
   - social:
       cards_layout_options:
         color: #173a58
+
 
 nav:
   - Home: index.md
