fix: docs tox only mkdocs

--- a/tox.ini
+++ b/tox.ini
@@ -43,10 +43,9 @@ commands = echo $(mypy src)
 description = Build docs.
 basepython = python3.11
 extras = docs
-changedir = docs
 # allowlist_externals = sphinx-build
 commands =
-    pdm run mkdocs build -M html "." "_build" -W --keep-going
+    pdm run mkdocs build
 
 [testenv:coverage-report]
 description = Report coverage over all test runs.
